validação de dados e retorno de mensagem de erro

--- a/mercado/src/main/resources/messages.properties
+++ b/mercado/src/main/resources/messages.properties
@@ -1,3 +1,3 @@
 nome.vazio= nome é obrigatório
 cpf.vazio= CPF é obrigatório
-cpf.invalido= CPF é informado é inválido
+cpf.invalido= CPF informado é inválido
