criação dos métodos de busca

--- a/mercado/src/main/resources/messages.properties
+++ b/mercado/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
-nome.vazio= nome È obrigatÛrio
-cpf.vazio= CPF È obrigatÛrio
-cpf.invalido= CPF informado È inv·lido
+nome.vazio= nome √© obrigat√≥rio
+cpf.vazio= CPF √© obrigat√≥rio
+cpf.invalido= CPF informado √© inv√°lido
+data.nascimento.obrigatorio= data de nascimento √© obrigat√≥rio
